[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/sprites/drone/idle/dron5.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/drone/idle/dron6.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/drone/idle/dron2.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/drone/idle/dron4.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/drone/idle/dron1.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/drone/idle/dron3.png" type="Texture" id=6]
[ext_resource path="res://assets/scripts/Drone.gd" type="Script" id=7]
[ext_resource path="res://scenes/other/StateManager.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/scripts/DroneIdle.gd" type="Script" id=9]
[ext_resource path="res://assets/scripts/DroneHoiming.gd" type="Script" id=10]

[sub_resource type="CircleShape2D" id=2]
radius = 57.0088

[sub_resource type="CircleShape2D" id=3]
radius = 308.989

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 0.9, 1.1, 1.3, 1.5, 1.7, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 2 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:offset:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Sprite:offset:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -15, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[node name="Drone" type="KinematicBody2D"]
script = ExtResource( 7 )
max_speed = 200
acceleration = 1500

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.492188, 0.492188 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -18 )
shape = SubResource( 2 )

[node name="Sight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
position = Vector2( -1, -16 )
shape = SubResource( 3 )

[node name="StateManager" parent="." instance=ExtResource( 8 )]

[node name="DroneIdle" type="Node" parent="StateManager"]
script = ExtResource( 9 )

[node name="DroneHoiming" type="Node" parent="StateManager"]
script = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 4 )

[connection signal="body_entered" from="Sight" to="." method="_on_Sight_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_Sight_body_exited"]
